--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/Dos.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
-		<div class="container">
+		<div class="containers">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
@@ -76,7 +76,7 @@
 							<h1>Gerardo Alejandro &amp; Alejandra</h1>
 							<h2>---- Nos Casamos ----</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">Recerva la fecha</a></p>
+							<p><a href="#" class="btn btn-default btn-sm">Reserva la fecha</a></p>
 						</div>
 					</div>
 				</div>
@@ -141,7 +141,7 @@
 										<i class="icon-calendar"></i>
 										<span>22 Enero 2022</span>
 									</div>
-									<p>Parroquia Maria Auxiliadora, Universo S/n, Col. Ciudad del Solciudad del Sol, La Piedad, Michoacán</p>
+									<p>Parroquia Maria Auxiliadora, Universo S/n, Col. Ciudad del Sol, La Piedad, Michoacán</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
