--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 				</div>
 					
 				<div class="col-md-6 animate-box">
-                 <img src="images/b.jpg" alt="user">
+                 <img src="images/B.jpg" alt="user">
              	</div>
 				</div>
 				
